--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -52,7 +52,7 @@
     <ng-template colRef="org.activity" label="Activity" let-activity sort [filter]="filters['orgActivity']">
       {{ activity | toLabel:'orgActivity' }}
     </ng-template>
-    <ng-template colRef="org.addresses.main.country" label="Country" let-country sort>
+    <ng-template colRef="org.addresses.main.country" label="Country" let-country sort [filter]="filters['territories']">
       {{ country | toLabel:'territories' }}
     </ng-template>
     <ng-template colRef="user.position" label="Position" let-position sort>
