--- a/apps/financiers/financiers/src/app/marketplace/organization/list/list.component.html
+++ b/apps/financiers/financiers/src/app/marketplace/organization/list/list.component.html
@@ -14,7 +14,7 @@
 
   <list-page-search>
     <mat-form-field appearance="outline" [formGroup]="searchForm">
-      <mat-label>Search for a sales company...</mat-label>
+      <mat-label>Search for a partner company...</mat-label>
       <mat-icon matPrefix svgIcon="search"></mat-icon>
       <input matInput type="text" formControlName="query" [value]="searchForm.query.value">
     </mat-form-field>
