--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -15,13 +15,13 @@
       </div>   
     </header>
     <section class="surface carousel-container">
-      <article *ngIf="popularTitle$ | async as title">
+      <header *ngIf="popularTitle$ | async as title">
         <h3>{{ title.title.international }}</h3>
         <a mat-flat-button [routerLink]="['title', title.id]">
           <span>See Analytics details</span>
           <mat-icon svgIcon="arrow_forward"></mat-icon>
         </a>
-      </article>
+      </header>
       <bf-carousel flex layout>
         <analytics-pie-chart class="surface" carouselItem [data]="orgActivityOfPopularTitle$ | async"></analytics-pie-chart>
         <analytics-map class="surface" carouselItem [data]="territoryActivityOfPopularTitle$ | async"></analytics-map>
