--- a/libs/user/src/lib/auth/components/privacy-policy/privacy-policy.component.html
+++ b/libs/user/src/lib/auth/components/privacy-policy/privacy-policy.component.html
@@ -241,7 +241,7 @@
               <td>X</td>
               <td>X</td>
               <td>
-                - To perform and deliver the Service (verification of identity, giving access to the database,
+                To perform and deliver the Service (verification of identity, giving access to the database,
                 displaying information to other users, audience analysis, getting help from support)
               </td>
               <td>Consent</td>
@@ -252,7 +252,7 @@
               <td>X</td>
               <td>X</td>
               <td>X</td>
-              <td>- To allow the management of Your user space</td>
+              <td>To allow the management of Your user space</td>
               <td>Consent</td>
               <td></td>
             </tr>
@@ -261,7 +261,7 @@
               <td>X</td>
               <td>X</td>
               <td></td>
-              <td>- To manage Our contractual relationship: invoicing and auditing</td>
+              <td>To manage Our contractual relationship: invoicing and auditing</td>
               <td>Legitimate grounds</td>
               <td></td>
             </tr>
@@ -271,7 +271,7 @@
               <td></td>
               <td>X</td>
               <td>
-                - To enhance Your user experience (to administer and analyze our activities in order to improve
+                To enhance Your user experience (to administer and analyze our activities in order to improve
                 quality, variety and availability
               </td>
               <td>Legitimate grounds</td>
@@ -286,9 +286,7 @@
               <td>X</td>
               <td></td>
               <td>X</td>
-              <td>
-                - To fulfill an obligation under law or contract
-              </td>
+              <td>To fulfill an obligation under law or contract</td>
               <td>Contractual execution or legal obligation</td>
               <td></td>
             </tr>
@@ -340,9 +338,9 @@
               <td>X</td>
               <td>X</td>
               <td>X</td>
-              <td> Firebase Authentication (Google Ireland Ltd) Place of processing: Ireland </td>
+              <td>Firebase Authentication (Google Ireland Ltd) Place of processing: Ireland</td>
               <td>id, email address, password, account creation date, last connection date, cookies</td>
-              <td> Verify user's identity, give access to the database. </td>
+              <td>Verify user's identity, give access to the database. </td>
               <td><a href="https://firebase.google.com/terms/">Privacy Policy</a></td>
             </tr>
             <tr>
@@ -448,8 +446,8 @@
               <td>X</td>
               <td>X</td>
               <td>X</td>
-              <td> Sendgrid (Twilio, Inc.) Place of Processing: United States </td>
-              <td> id, name, surname, email address </td>
+              <td>Sendgrid (Twilio, Inc.) Place of Processing: United States</td>
+              <td>id, name, surname, email address</td>
               <td>Email personalization</td>
               <td><a href="https://www.twilio.com/legal/tos">Privacy Policy</a></td>
             </tr>
