--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -49,10 +49,10 @@
     <ng-template colRef="org.denomination.public" label="Company name" let-name sort>
       {{ name }}
     </ng-template>
-    <ng-template colRef="org.activity" label="Activity" let-activity sort [filter]="filters['orgActivity']">
+    <ng-template colRef="org.activity" label="Activity" let-activity sort [filter]="filters.orgActivity">
       {{ activity | toLabel:'orgActivity' }}
     </ng-template>
-    <ng-template colRef="org.addresses.main.country" label="Country" let-country sort [filter]="filters['territories']">
+    <ng-template colRef="org.addresses.main.country" label="Country" let-country sort [filter]="filters.territories">
       {{ country | toLabel:'territories' }}
     </ng-template>
     <ng-template colRef="user.position" label="Position" let-position sort>
