--- a/libs/notification/src/lib/components/item/item.component.html
+++ b/libs/notification/src/lib/components/item/item.component.html
@@ -3,7 +3,7 @@
   <img matListAvatar [asset]="notification.placeholderUrl" [ref]="notification.imgRef" alt="Notification picture">
   <p *ngIf="(xs$ | async) === false" matLine [ngClass]="{ disabled: notification.app.isRead }" class="mat-body-1" test-id="notification-message" [innerHtml]="notification.message"></p>
   <span matLine>
-    <small [ngClass]="{ disabled: notification.app.isRead }">{{ notification._meta.createdAt | date: 'shortTime' }}</small>
+    <small class="mat-caption">{{ notification._meta.createdAt | date: 'shortTime' }}</small>
   </span>
   <button *ngIf="!notification.app.isRead; else isRead" mat-button (click)="markAsRead(notification)">
     <div class="mat-caption" fxLayout="column" fxLayoutAlign="center center">
@@ -13,7 +13,7 @@
   </button>
 
   <ng-template #isRead>
-    <bf-tag fxLayout>
+    <bf-tag disabled fxLayout>
       <mat-icon svgIcon="check"></mat-icon>
       READ
     </bf-tag>
