changed table selector

--- a/libs/user/src/lib/auth/components/privacy-policy/privacy-policy.component.html
+++ b/libs/user/src/lib/auth/components/privacy-policy/privacy-policy.component.html
@@ -222,7 +222,7 @@
 
       <article>
         <h3>4. Personal Data we collect directly from You</h3>
-        <div class="table__wrapper">
+        <div class="table_wrapper">
           <table border="1px solid">
             <tr>
               <th>Personal Data</th>
