--- a/libs/event/src/lib/form/shell/shell.component.html
+++ b/libs/event/src/lib/form/shell/shell.component.html
@@ -1,21 +1,4 @@
-﻿<ng-template #confirmExit>
-  <div class="confirm-exit" fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="16px">
-    <button fxFlexAlign="end" mat-icon-button [mat-dialog-close]="undefined">
-      <mat-icon svgIcon="close"></mat-icon>
-    </button>
-    <h1>You are about to leave the form.</h1>
-    <p>Some changes have not been saved.<br />If you leave now, you will lose these changes.</p>
-    <div fxLayout="column" fxLayoutAlign="center">
-      <button class="save" mat-flat-button color="primary" [mat-dialog-close]="true">
-        Save & Exit</button>
-      <button class="text-primary" mat-button [mat-dialog-close]="false">
-        Close without saving
-      </button>
-    </div>
-  </div>
-</ng-template>
-
-<ng-container *ngIf="form else loading">
+﻿<ng-container *ngIf="form else loading">
   <ng-template pageBar>
     <header fxLayout fxLayoutAlign="space-between center">
       <div fxLayout fxLayoutGap="40px">
