--- a/libs/contract/src/lib/import/import.component.html
+++ b/libs/contract/src/lib/import/import.component.html
@@ -7,7 +7,7 @@
       color="primary"
       mat-stroked-button
       download="import-contracts-template.xlsm"
-      href="/assets/templates/import-contracts-template.xlsm"
+      [href]="templateUrl"
     >
       <mat-icon svgIcon="cloud_download"></mat-icon><span>Download our excel contracts template</span>
     </a>
