8211 per unit buttons on line chart

--- a/libs/analytics/src/lib/components/line-chart/line-chart.component.scss
+++ b/libs/analytics/src/lib/components/line-chart/line-chart.component.scss
@@ -2,6 +2,10 @@ analytics-line-chart {
   display: flex;
   flex-direction: column;
 
+  section {
+    margin-bottom: 16px;
+  }
+
   apx-chart {
     display: block;
     margin-block: auto;
