--- a/libs/analytics/src/lib/components/line-chart/line-chart.component.html
+++ b/libs/analytics/src/lib/components/line-chart/line-chart.component.html
@@ -2,12 +2,18 @@
   <ng-content></ng-content>
 </header>
 <ng-container *ngIf="lineChartOptions.series?.length; else noData">
+  <section fxLayout fxLayoutGap="16px">
+    <button mat-button [disabled]="period === 'day'" (click)="changePeriod('day')">Per day</button>
+    <button mat-button [disabled]="period === 'week'" (click)="changePeriod('week')">Per week</button>
+    <button mat-button [disabled]="period === 'month'" (click)="changePeriod('month')">Per month</button>
+  </section>
   <apx-chart
     #chart
     [series]="lineChartOptions.series"
     [chart]="lineChartOptions.chart"
     [theme]="lineChartOptions.theme"
     [legend]="lineChartOptions.legend"
+    [yaxis]="lineChartOptions.yaxis"
     [xaxis]="lineChartOptions.xaxis"
     [dataLabels]="lineChartOptions.dataLabels"
     [stroke]="lineChartOptions.stroke"
