Remove all 3 modals and create 1 global modal who'll contains all

--- a/libs/ui/src/lib/modal/modal.component.html
+++ b/libs/ui/src/lib/modal/modal.component.html
@@ -3,3 +3,7 @@
     <mat-icon svgIcon="close"></mat-icon>
   </button>
 </mat-dialog-header>
+
+<mat-dialog-content class="mat-dialog-content" fxLayout="column" fxLayoutAlign="start center">
+  <ng-content></ng-content>
+</mat-dialog-content>
