--- a/libs/analytics/src/lib/components/line-chart/line-chart.component.html
+++ b/libs/analytics/src/lib/components/line-chart/line-chart.component.html
@@ -1,8 +1,8 @@
-<header fxLayout fxLayoutGap="8px">
+<header>
   <ng-content></ng-content>
 </header>
 <ng-container *ngIf="lineChartOptions.series?.length; else noData">
-  <section fxLayout fxLayoutGap="16px">
+  <section>
     <button mat-button [disabled]="period === 'day'" (click)="changePeriod('day')">Per day</button>
     <button mat-button [disabled]="period === 'week'" (click)="changePeriod('week')">Per week</button>
     <button mat-button [disabled]="period === 'month'" (click)="changePeriod('month')">Per month</button>
