Update modal on first vist preferences (buyer)

--- a/libs/user/src/lib/auth/pages/preferences/modal/preferences.component.html
+++ b/libs/user/src/lib/auth/pages/preferences/modal/preferences.component.html
@@ -1,4 +1,4 @@
-<mat-dialog-content class="mat-dialog-content" fxLayout="column" fxLayoutAlign="start center">
+<global-modal>
   <h2>What are you looking for?</h2>
 
   <p class="mat-body-1">For a more personalized and curated experience on Archipel, we offer you to specify your content preferences.</p>
@@ -9,4 +9,4 @@
     <button mat-flat-button color="accent" (click)="update()">Save Preferences</button>
     <button mat-button test-id="skip-preferences" (click)="close()">Maybe Later</button>
   </footer>
-</mat-dialog-content>
+</global-modal>
