--- a/libs/utils/src/lib/gdpr-cookie/cookie-dialog/cookie-dialog.component.html
+++ b/libs/utils/src/lib/gdpr-cookie/cookie-dialog/cookie-dialog.component.html
@@ -1,12 +1,10 @@
-<mat-card>
-  <mat-card-content>
-    <cookie-form [form]="form"></cookie-form>
-    <section fxLayout fxLayoutAlign="center center">
-      <button class="save-btn" mat-flat-button color="primary" (click)="save()">Save and quit</button>
-    </section>
-    <section class="divider">
-      <mat-divider [inset]="true"></mat-divider>
-    </section>
-    <button mat-button (click)="openPrivacyPolicy()">Privacy Policy</button>
-  </mat-card-content>
-</mat-card>
+<global-modal>
+  <cookie-form [form]="form"></cookie-form>
+  <section fxLayout fxLayoutAlign="center center">
+    <button class="save-btn" mat-flat-button color="primary" (click)="save()">Save & Exit</button>
+  </section>
+  <section class="divider">
+    <mat-divider [inset]="true"></mat-divider>
+  </section>
+  <button mat-button (click)="openPrivacyPolicy()">Privacy Policy</button>
+</global-modal>
