--- a/libs/ui/src/lib/confirm/confirm.component.html
+++ b/libs/ui/src/lib/confirm/confirm.component.html
@@ -1,15 +1,9 @@
-<mat-dialog-header fxLayout fxLayoutAlign="end">
-  <button class="close" mat-icon-button (click)="close()">
-    <mat-icon svgIcon="close"></mat-icon>
-  </button>
-</mat-dialog-header>
-
-<mat-dialog-content class="mat-dialog-content" fxLayout="column" fxLayoutAlign="start center">
+<global-modal>
   <h2>{{ data.title || 'Confirm' }}</h2>
-
+  
   <p class="mat-body-1">{{ data.question || 'Do you confirm ?' }}</p>
   <p class="mat-body-1" *ngIf="data.advice">{{ data.advice }}</p>
-
+  
   <mat-dialog-actions fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="4px">
     <button test-id="confirm" mat-flat-button color="primary" (click)="confirm()">
       {{ data.confirm || 'Confirm' }}
@@ -18,4 +12,4 @@
       {{ data.cancel || 'Cancel' }}
     </button>
   </mat-dialog-actions>
-</mat-dialog-content>
+</global-modal>
