Update Confirmation with Input modal

--- a/libs/ui/src/lib/confirm-input/confirm-input.component.scss
+++ b/libs/ui/src/lib/confirm-input/confirm-input.component.scss
@@ -1,7 +1,9 @@
-mat-dialog-content {
-  p, span {
-    margin-bottom: 24px;
-  }
+:host {
+  text-align: center;
+}
+
+p, span {
+  margin-bottom: 24px;
 }
 
 mat-dialog-actions {
