7689 analytics service no longer needs movie or org service

--- a/libs/movie/src/lib/movie/marketplace/shell/shell.component.html
+++ b/libs/movie/src/lib/movie/marketplace/shell/shell.component.html
@@ -88,7 +88,7 @@
       <div>
         <ng-container *ngFor="let video of movie.promotional.videos.otherVideos">
           <div class="video-container" *ngIf="video.privacy === 'public'">
-            <video-viewer [ref]="video" *ngIf="video.jwPlayerId" (stateChange)="videoStateChanged(movie.id, $event)"></video-viewer>
+            <video-viewer [ref]="video" *ngIf="video.jwPlayerId" (stateChange)="videoStateChanged(movie, $event)"></video-viewer>
             <p>{{ video.title || (video.type | toLabel: 'hostedVideoTypes') }}</p>
           </div>
         </ng-container>
