--- a/apps/festival/festival/src/app/marketplace/marketplace.component.scss
+++ b/apps/festival/festival/src/app/marketplace/marketplace.component.scss
@@ -1,5 +1,5 @@
 @use '@angular/material' as mat;
-@import "~@angular/flex-layout/mq";
+@import "@angular/flex-layout/mq";
 
 :host {
   display: block;
