--- a/libs/event/src/lib/components/slide/slide.component.html
+++ b/libs/event/src/lib/components/slide/slide.component.html
@@ -16,7 +16,7 @@
       </a>
     </ng-container>
     <ng-container *ngIf="event.type === 'slate'">
-      <a fclass="title-image" [routerLink]="['/event', event.id, 'r', 'i']">
+      <a class="title-image" [routerLink]="['/event', event.id, 'r', 'i']">
         <img 
           asset="slate_presentation.svg"
           width="225px"
