--- a/libs/landing/src/lib/appBridgeBanner/app-bridge-banner.component.scss
+++ b/libs/landing/src/lib/appBridgeBanner/app-bridge-banner.component.scss
@@ -1,4 +1,4 @@
-@import "~@angular/flex-layout/mq";
+@import "@angular/flex-layout/mq";
 
 :host {
   display: flex;
@@ -51,8 +51,8 @@ section {
   }
 }
 
-@include layout-bp(lt-sm) {
+@include layout-bp(xs) {
   :host {
-    text-align: center;
+    display: none;
   }
 }
