--- a/apps/catalog/catalog/src/app/landing/landing.component.html
+++ b/apps/catalog/catalog/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <landing-shell-page>
-  <app-bridge-banner fxHide.xs></app-bridge-banner>
+  <app-bridge-banner></app-bridge-banner>
 
   <landing-header>
     <header id="header-to-scroll" class="max-width">
