--- a/apps/catalog/catalog/src/app/landing/landing.component.scss
+++ b/apps/catalog/catalog/src/app/landing/landing.component.scss
@@ -213,7 +213,7 @@ landing-app-link {
   }
 }
 
-@include layout-bp(lt-sm) {
+@include layout-bp(xs) {
   catalog-landing {
     landing-header {
       text-align: center;
