--- a/apps/festival/festival/src/app/landing/landing.component.html
+++ b/apps/festival/festival/src/app/landing/landing.component.html
@@ -1,6 +1,6 @@
 <landing-shell-page>
 
-  <app-bridge-banner fxHide.xs></app-bridge-banner>
+  <app-bridge-banner></app-bridge-banner>
 
   <landing-header>
     <header id="header-to-scroll" class="max-width">
@@ -22,7 +22,7 @@
       <article class="max-width" fxLayout="column" fxLayoutAlign="start" fxLayoutGap="16px">
         <h2 class="mat-display-1">They're using it</h2>
         <p class="mat-body-1">Over 1400 buyers are already using Archipel, from companies like:</p>
-        <div fxLayout="row wrap">
+        <div>
           <img *ngFor="let partnerLogo of partnerLogoList" [asset]='partnerLogo' [alt]='partnerLogo'>
         </div>
       </article>
