Fix circular dependenciy with modal, fix tag that was not closed

--- a/libs/media/src/lib/file/picker/picker.component.html
+++ b/libs/media/src/lib/file/picker/picker.component.html
@@ -81,4 +81,4 @@
       <mat-spinner diameter="50" color="primary"></mat-spinner>
     </article>
   </ng-template>  
-<global-modal>
+</global-modal>
