AC - button 'Back to Homepage'

--- a/libs/notification/src/lib/notification.component.html
+++ b/libs/notification/src/lib/notification.component.html
@@ -20,6 +20,6 @@
     <h1>You have no notification yet.</h1>
     <p>You haven't received any notifications at this time.</p>
     <img asset="empty_notification.svg" alt="No title image">
-    <button mat-flat-button color="accent" (click)="leadToHomepage()">Back to Homepage</button>
+    <button mat-flat-button color="primary" (click)="leadToHomepage()">Back to Homepage</button>
   </section>
 </ng-template>
