cross App - "Update" on organization settings

--- a/libs/organization/src/lib/organization/pages/organization/organization.component.html
+++ b/libs/organization/src/lib/organization/pages/organization/organization.component.html
@@ -1,6 +1,6 @@
 <organization-form [form]="organizationForm"></organization-form>
 <footer fxLayout="row" fxLayoutAlign="center center">
-  <button mat-flat-button color="accent" (click)="update()">
+  <button mat-flat-button color="primary" (click)="update()">
     <mat-icon svgIcon="save"></mat-icon>
     <span>Update</span>
   </button>
