update modal from #6507

--- a/libs/movie/src/lib/movie/form/main/main.component.html
+++ b/libs/movie/src/lib/movie/form/main/main.component.html
@@ -204,7 +204,7 @@
 
       <bf-form-table [columns]="displayedColumns" [form]="form.directors">
         <ng-template colRef="description" let-description>
-          <span (click)="openDetails('Description', [description])">
+          <span (click)="openDetails('Description', description)">
             {{ description | maxLength: 75 }}
           </span>
         </ng-template>
