MF - button 'Projects'

--- a/apps/financiers/financiers/src/app/marketplace/home/home.component.html
+++ b/apps/financiers/financiers/src/app/marketplace/home/home.component.html
@@ -8,7 +8,7 @@
     professional content financiers.
   </p>
   <div class="actions" fxLayout="row" fxLayoutGap="24px">
-    <a mat-flat-button color="accent" routerLink="../title">Projects</a>
+    <a mat-flat-button color="primary" routerLink="../title">Projects</a>
     <a mat-stroked-button routerLink="../organization">Financiers</a>
   </div>
 </header>
