MF - button 'Download'

--- a/apps/financiers/financiers/src/app/marketplace/home/home.component.html
+++ b/apps/financiers/financiers/src/app/marketplace/home/home.component.html
@@ -42,7 +42,7 @@
   <!-- Banner -->
   <section fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="24px" class="banner dark-contrast-theme">
     <h1>Want to know more about investing <br /> in the content industry?</h1>
-    <a mat-flat-button color="accent" href="assets/docs/film-industry.pdf" target="_blank">
+    <a mat-flat-button color="primary" href="assets/docs/film-industry.pdf" target="_blank">
       Download our investment guide
     </a>
   </section>
