--- a/libs/user/src/lib/auth/forms/notifications-form/notifications-form.component.html
+++ b/libs/user/src/lib/auth/forms/notifications-form/notifications-form.component.html
@@ -61,7 +61,7 @@
     </ng-container>
 
     <footer fxLayout fxLayoutAlign="center center">
-      <button mat-flat-button color="accent" type="submit">
+      <button mat-flat-button color="primary" type="submit">
         <mat-icon svgIcon="save"></mat-icon>
         <span>Update</span>
       </button>
