--- a/libs/user/src/lib/auth/pages/preferences/page/preferences.component.html
+++ b/libs/user/src/lib/auth/pages/preferences/page/preferences.component.html
@@ -3,7 +3,7 @@
   <auth-preferences-form [form]="form"></auth-preferences-form>
 </section>
 <footer fxLayout fxLayoutAlign="center center">
-  <button mat-flat-button color="accent" (click)="update()">
+  <button mat-flat-button color="primary" (click)="update()">
     <mat-icon svgIcon="save"></mat-icon>
     <span>Update</span>
   </button>
