--- a/libs/user/src/lib/auth/pages/profile-cookie/profile-cookie.component.html
+++ b/libs/user/src/lib/auth/pages/profile-cookie/profile-cookie.component.html
@@ -4,7 +4,7 @@
   </mat-card-content>
 </mat-card>
 <footer fxLayout fxLayoutAlign="center center">
-  <button mat-flat-button color="accent" (click)="update()">
+  <button mat-flat-button color="primary" (click)="update()">
     <mat-icon svgIcon="save"></mat-icon>
     <span>Update</span>
   </button>
