CrossApp - button 'Previous page'

--- a/libs/organization/src/lib/organization/pages/view/view.component.html
+++ b/libs/organization/src/lib/organization/pages/view/view.component.html
@@ -9,7 +9,7 @@
       </div>
     </article>
     <ng-container>
-      <a mat-stroked-button color="primary" (click)="goBack()" fxLayoutAlign="center center">
+      <a mat-button color="primary" (click)="goBack()" fxLayoutAlign="center center">
         <mat-icon svgIcon="arrow_back"></mat-icon>
         <span>Previous page</span>
       </a>
