--- a/libs/user/src/lib/auth/pages/profile-view/profile-view.component.html
+++ b/libs/user/src/lib/auth/pages/profile-view/profile-view.component.html
@@ -9,7 +9,7 @@
         </ng-container>
       </div>
     </article>
-      <a mat-stroked-button color="primary" (click)="goBack()" fxLayoutAlign="center center">
+      <a mat-button color="primary" (click)="goBack()" fxLayoutAlign="center center">
         <mat-icon svgIcon="arrow_back"></mat-icon>
         <span>Previous Page</span>
       </a>
