--- a/apps/festival/festival/src/app/dashboard/title/list/list.component.html
+++ b/apps/festival/festival/src/app/dashboard/title/list/list.component.html
@@ -90,7 +90,7 @@
       </mat-card>
     </article>
     <h3>Or</h3>
-    <button (click)="openIntercom()" mat-flat-button color="primary">
+    <button (click)="openIntercom()" mat-flat-button color="accent">
       Contact the {{ app | appName }} team
     </button>
   </section>
