properly access property length of terms

--- a/apps/catalog/catalog/src/app/marketplace/title/avails/avails.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/avails.component.html
@@ -12,7 +12,7 @@
 
 <router-outlet></router-outlet>
 
-<ng-container *ngIf="(terms$ | async).length">
+<ng-container *ngIf="(terms$ | async)?.length">
   <h2 id="rights">Preselected Rights</h2>
   <mat-card *ngFor="let control of terms$ | async | reverse; index as i;" [attr.data-scroll-to-view-id]="i">
     <form [formGroup]="control" *ngIf="control.value as term">
