--- a/libs/contract/src/lib/term/components/detailed/detailed.component.html
+++ b/libs/contract/src/lib/term/components/detailed/detailed.component.html
@@ -1,29 +1,29 @@
-<header>
-  <h1>{{ data.scope | titlecase }}</h1>
-  <button mat-icon-button (click)="close()">
-    <mat-icon svgIcon="close"></mat-icon>
-  </button>
-</header>
-<section>
-  <ng-container *ngIf="(groups$ | async) as groups">
-    <ng-container *ngIf="!!groups.length; else default">
-      <ng-container *ngFor="let group of groups">
-        <article *ngIf="group.items.length">
-          <p class="mat-body-2">{{ group.label }}</p>
-          <mat-chip-list>
-            <mat-chip disableRipple *ngFor="let item of group.items">
-              {{ item | toLabel: data.scope }}
-            </mat-chip>
-          </mat-chip-list>
-        </article>
+<global-modal>
+  <header>
+    <h2>{{ data.scope | titlecase }}</h2>
+  </header>
+
+  <section>
+    <ng-container *ngIf="(groups$ | async) as groups">
+      <ng-container *ngIf="!!groups.length; else default">
+        <ng-container *ngFor="let group of groups">
+          <article *ngIf="group.items.length">
+            <p class="mat-body-2">{{ group.label }}</p>
+            <mat-chip-list>
+              <mat-chip disableRipple *ngFor="let item of group.items">
+                {{ item | toLabel: data.scope }}
+              </mat-chip>
+            </mat-chip-list>
+          </article>
+        </ng-container>
       </ng-container>
     </ng-container>
-  </ng-container>
-  <ng-template #default>
-    <mat-chip-list>
-      <mat-chip disableRipple *ngFor="let item of data.terms">
-        {{ item | toLabel: data.scope }}
-      </mat-chip>
-    </mat-chip-list>
-  </ng-template>
-</section>
+    <ng-template #default>
+      <mat-chip-list>
+        <mat-chip disableRipple *ngFor="let item of data.terms">
+          {{ item | toLabel: data.scope }}
+        </mat-chip>
+      </mat-chip-list>
+    </ng-template>
+  </section>
+</global-modal>
